Prevented drawer overscroll on mobile

--- a/src/components/BottomSheet.module.css
+++ b/src/components/BottomSheet.module.css
@@ -58,3 +58,7 @@
   display: none;
   overscroll-behavior: none;
 }
+
+.content {
+  overscroll-behavior: none;
+}
